--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
     "name": "Karnan",
-    "description": "Karnan is the Modified Version of WhatsAsena, Made By @farhan-dqz with Baileys.",
+    "description": "Karnan is the Modified Version of WhatsAsena, Made By @TheBlackLion17 with Baileys.",
     "logo": "Karnan.jpg",
-    "keywords": ["whatsapp", "userbot", "julie", "WhatsAsena", "mwol", "bot", "ai"],
-    "repository": "https://github.com/Ajmal-Achu/Karnan",
-    "website":   "https://github.com/farhan-dqz/Julie-Mwol",
-    "success_url": "https://github.com/farhan-dqz/Julie-Mwol",
+    "keywords": ["whatsapp", "userbot", "Karnan", "WhatsAsena", "mwol", "bot", "ai"],
+    "repository": "https://github.com/TheBlackLion17/Karnan",
+    "website":   "https://github.com/TheBlackLion17/Karnan",
+    "success_url": "https://github.com/TheBlackLion17/Karnan",
     "stack": "container",
     "env": {
-        "JULIE_SESSION": {
+        "Karnan_SESSION": {
             "description": "Type here yours Asena Session.",
             "required": true
         },
